@@ -1,3 +1,8 @@
+Mon Sep 26 00:41:39 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>
+
+	* time/stdtime.c (SWI_Territory_ConvertDateAndTime): Add missing
+	buffer specification.  Bug #223.
+
 Thu Sep  8 00:10:25 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>
 
 	* unix/unix.c (find_terminator): Remove.
